@@ -15,6 +15,11 @@ Version 2.1.1
     Reported by Andy Shipman.
   - Fix crash or bad results in queries with IN or "= ANY" where the element
     type on the right-hand side is different from the left-hand side type.
+  - Add support for reading infinite NUMBERs.
+    Oracle NUMBER has infinite values, which are represented as "~" and "-~".
+    Since PostgreSQL's "numeric" does not know infinity, map these values
+    to NaN in this case.  For "real" and "double precision" we can use the
+    normal infinity values.
 
 Version 2.1.0, released 2018-10-01
   Enhancements:
